--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 
   <body>
     <nav>
-        leaer is in charge  
+        leader is in charge  
     </nav>
-    <main></main>
+    <main>
+      this is fresh man in charge
+      hello
+      I am making my first project
+      
+    </main>
     <footer></footer>
   </body>
 </html>
