--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <body>
     <nav>
         leaer is in charge  
+        haha
+        hoho
+        yeah
+        
     </nav>
     <main></main>
     <footer></footer>
